[-] Remove escape quote

--- a/locales/en-GB.json
+++ b/locales/en-GB.json
@@ -677,8 +677,8 @@
 			"gameOver": "The game is over",
 			"asJoin": "joined the party",
 			"youJoin": "You have joined the game",
-			"yourTurn": "It\\'s your turn",
-			"otherTurn": "It\\'s up to the opponent to play",
+			"yourTurn": "It's your turn",
+			"otherTurn": "It's up to the opponent to play",
 			"gameRestart": "The game restart",
 			"youAskRematch": "You asked for a rematch",
 			"otherAskRematch": "asked for revenge",
