--- a/locales/fr-FR.json
+++ b/locales/fr-FR.json
@@ -677,8 +677,8 @@
 			"gameOver": "La partie est terminée",
 			"asJoin": "a rejoint la partie",
 			"youJoin": "Vous avez rejoint la partie",
-			"yourTurn": "C\\'est votre tour",
-			"otherTurn": "C\\'est à l\\'adversaire de jouer",
+			"yourTurn": "C'est votre tour",
+			"otherTurn": "C'est à l'adversaire de jouer",
 			"gameRestart": "La partie recommence",
 			"youAskRematch": "Vous avez demandé une revanche",
 			"otherAskRematch": "a demandé une revanche",
