--- a/locales/fr-FR.json
+++ b/locales/fr-FR.json
@@ -473,6 +473,11 @@
 				"versus": "contre",
 				"gameReplay": "Replay de la partie :"
 			}
+		},
+		"mastermind": {
+			"chooseColor": "discord.mastermind.chooseColor",
+			"asNotChoose": "discord.mastermind.asNotChoose",
+			"asChoose": "discord.mastermind.asChoose"
 		}
 	},
 	"insta": {
@@ -531,6 +536,21 @@
 				"invalidAccount": "Compte invalide",
 				"sameAccount": "Pas de panique ! Votre compte est déjà synchronisé"
 			}
+		},
+		"mastermind": {
+			"chooseColor": "Vous devez choisir la suite de couleur pour votre adversaire\n\n",
+			"asChoose": "✅ {{usernmae}} a choisi",
+			"asNotChoose": "❌ {{usernmae}} n'a pas encore choisi",
+			"needToChoose": "Vous devez choisir une suite de 5 couleurs, vous avez choisi {{colors}} (Reste {{colorsLeft}} couleurs)",
+			"alreadyChoose": "Vous avez déjà choisi 5 couleurs",
+			"choicesTaken": "Votre choix a bien été pris en compte\n\n{{colors}}",
+			"propose": "Proposer la suite de couleur",
+			"partyStart": "La partie commence !",
+			"youWin": "Vous avez gagné",
+			"youLoose": "Vous avez perdu",
+			"allLoose": "Vous avez tout les deux perdu",
+			"oneLoose": "{{username}} a perdu avec la suite {{colors}}\nEn attente de {{opponentUsername}}",
+			"oneWin": "{{username}} a gagné avec la suite {{colors}}\n{{opponentUsername}} avait {{opponentColors}}"
 		}
 	},
 	"dashboard": {
