--- a/locales/fr-FR.json
+++ b/locales/fr-FR.json
@@ -475,9 +475,20 @@
 			}
 		},
 		"mastermind": {
-			"chooseColor": "discord.mastermind.chooseColor",
-			"asNotChoose": "discord.mastermind.asNotChoose",
-			"asChoose": "discord.mastermind.asChoose"
+			"chooseColor": "Vous devez choisir la suite de couleur pour votre adversaire\n\n",
+			"asChoose": "✅ {{username}} a choisi",
+			"asNotChoose": "❌ {{username}} n'a pas encore choisi",
+			"needToChoose": "Vous devez choisir une suite de 5 couleurs, vous avez choisi {{colors}} (Reste {{colorsLeft}} couleurs)",
+			"alreadyChoose": "Vous avez déjà choisi 5 couleurs",
+			"choicesTaken": "Votre choix a bien été pris en compte\n\n{{colors}}",
+			"propose": "Proposer la suite de couleur",
+			"partyStart": "La partie commence !",
+			"youWin": "Vous avez gagné",
+			"youLoose": "Vous avez perdu",
+			"allLoose": "Vous avez tout les deux perdu",
+			"oneLoose": "{{username}} a perdu avec la suite {{colors}}\nEn attente de {{opponentUsername}}",
+			"oneWin": "{{username}} a gagné avec la suite {{colors}}\n{{opponentUsername}} avait {{opponentColors}}",
+			"startToSelect": "Commencer à choisir"
 		}
 	},
 	"insta": {
@@ -536,21 +547,6 @@
 				"invalidAccount": "Compte invalide",
 				"sameAccount": "Pas de panique ! Votre compte est déjà synchronisé"
 			}
-		},
-		"mastermind": {
-			"chooseColor": "Vous devez choisir la suite de couleur pour votre adversaire\n\n",
-			"asChoose": "✅ {{usernmae}} a choisi",
-			"asNotChoose": "❌ {{usernmae}} n'a pas encore choisi",
-			"needToChoose": "Vous devez choisir une suite de 5 couleurs, vous avez choisi {{colors}} (Reste {{colorsLeft}} couleurs)",
-			"alreadyChoose": "Vous avez déjà choisi 5 couleurs",
-			"choicesTaken": "Votre choix a bien été pris en compte\n\n{{colors}}",
-			"propose": "Proposer la suite de couleur",
-			"partyStart": "La partie commence !",
-			"youWin": "Vous avez gagné",
-			"youLoose": "Vous avez perdu",
-			"allLoose": "Vous avez tout les deux perdu",
-			"oneLoose": "{{username}} a perdu avec la suite {{colors}}\nEn attente de {{opponentUsername}}",
-			"oneWin": "{{username}} a gagné avec la suite {{colors}}\n{{opponentUsername}} avait {{opponentColors}}"
 		}
 	},
 	"dashboard": {
